# projs

./: .gitignore  .gitmodules  bump.org  comoffers.org  database_types.org  database_types.txt  dpwiz.org  hadan.org  hdbc.org  lensissue.md  lockerr.org  lockerr.org_archive  market.org  metatea.org  money.dot  world.org  xwm.org
Makefile/vcoding/: Makefile
bash/: codeall2flac.sh  codeall2flac.sh~  foo2del.sh
bash/2gis/: 2gis
bash/7zx/: 7zx.sh
bash/codeall/: codeall.sh
bash/debianinit/: local
bash/firewall/: simple-miac.sh
bash/mkpoliclinux/: mkpoliclinux
bash/mvsame/: Makefile  mvsame
bash/proxy/: proxy.sh
bash/pullall/: pullall.sh
bash/sap/: sap
bash/sapprinter/: sapprinter
bash/updateportage/: updateportage.sh
bash/v-machines/: kvm.sh  vbox.sh
blog/: colors.css  gitsubmodules.md  monoid.hs  monoid.html  monoid.md
c/dbfsak/: CHANGES  CREDITS  MANIFEST  Makefile  README  dbf.cpp  dbf.h  dbfsak.1  dbfsak.cpp
c/finger/: finger.c
c/kladr/: Doxyfile  Makefile  kladr.c  test.c
c/matrix/: Makefile  README  main.cpp  matrix.cpp  matrix.hpp
coq/: binum.v  cho.v  lists.glob  lists.v  log.v  stack.v  tutorial.v
cpp/1/: Main.cpp  Main.hpp  Makefile
cpp/ngram/: Main.cpp  Ngram.cpp  Ngram.h  ngram.pro
fp/0912/: doctorx.hs  fly.task
graphviz/: hello.dot  morse.dot  prelude.dot
haskell/: Arrows.hs  Yampa.hs  gtk.hs  jam.hs  korzini.hs  korzini.txt  ngram.hs  parsec.hs  pinumber.hs  pr.hs  satate.hs
haskell/candles/: candle.hs
haskell/cell/: README.md  cell.cabal  stack.yaml
haskell/cell/app/: Main.hs
haskell/heist/: heist.hs
haskell/heist/templates/: default.tpl
haskell/hello/: README.md  hello.cabal
haskell/hello/app/: Main.hs
haskell/hello/src/: Bib.hs  Clear.hs  Escape.hs  Lazy.hs  Lib.hs  Matrix.hs  Stack.hs  Store.hs  Stream.hs
haskell/leet/: CHANGELOG.md  README.md  leet.cabal
haskell/leet/app/: Main.hs
haskell/leet/src/: Leet.hs  Leet897.hs
haskell/lormatrix/: .stylish-haskell.yaml  CHANGELOG.md  LICENSE  default.nix  lormatrix.cabal  nixpkgs.json  nixpkgs.nix  release.nix  stack.yaml
haskell/lormatrix/cpp/: lormatrix.cpp
haskell/lormatrix/src/: Accelerate.hs  Array.hs  Repa.hs  RepaPar.hs  RepaStrict.hs  RepaStrictFinal.hs  RepaStrictPar.hs  UArray.hs  Vect.hs
haskell/mu-reader/: README.md  mu-reader.cabal
haskell/mu-reader/src/: Lib.hs
haskell/mu-reader/src/Lib/: App1.hs  App2.hs  Common.hs  RecReaderT.hs  Service.hs
haskell/ngrams/: data.txt  data2.txt  ngram.hs  ngram.py  ngramfilter.hs  ngramgen.hs
haskell/overdraft/: CHANGELOG.md  README.md  overdraft.cabal  package.yaml  stack.yaml
haskell/overdraft/src/: Lib.hs
haskell/reader/: reader.hs
haskell/teststorage/: Common.hs  GenerateTest.hs  PostInstance.hs  PostTest.hs  teststorage.cabal
isabelle/: Hello.thy  Lists.thy  Log.thy
jq/: fib.jq
js/angularjs/sample1/: activity.html  angular-ui.js  index.html  jquery-ui-1.8.19.custom.min.js  main.html  project.html  sample.js
jupyter/: shell.nix  tutor.ipynb
jupyter/nix/: sources.json
lisp/: bars.lisp  coastcalc.lisp  death.lisp  flet.lisp  gaussian.lisp  health.lisp  instrict-compare.lisp  kladr.lisp  left-to-right.lisp  metaclass-sample.lisp  metaclass-slot.lisp  persetron.lisp  qgen.lisp  sql-format.lisp
lisp/deadlock/: account.lisp  candle.lisp  classes.lisp  collection.lisp  common.lisp  conditions.lisp  deadlock.asd  gaussian.lisp  generics.lisp  hystory-data.lisp  methods.lisp  packages.lisp  spec.odt  spec.tex  strategy.lisp  tests.lisp  trade-position.lisp
lisp/kladr/: kladr.asd  kladr.lisp  packages.lisp  sqlite.lisp
lisp/tests/: clsql.lisp  elephant.lisp  postmodern.lisp
perl/: aa.pl  aa.pl~  cltables.pl  shut.pl
perl/bd/: bd.pl
prolog/: f.pl  hello.pl
python/: a.py  decorator_toy.py  fac.py  facc.py  fufu.py  leet1266.py  maze.py  pygtk.py  query.py  sort.py
python/db/: db.py
python/gtk/: pygtk.py
python/juplay/: .gitignore  Untitled.ipynb  kernels.nix
python/kladr/: kladr.py
python/kladr-worker/: gui.glade  kladr_handler.py  main.py  reformat_kladr.py
python/qt/: qt.py
qtdesigner/: Makefile  README  aa.py  untitled.ui
rust/book/closures/: Cargo.toml
rust/book/closures/src/: main.rs
rust/book/errhan/: Cargo.toml  hello.txt
rust/book/errhan/src/: main.rs
rust/book/guessing_game/: Cargo.toml
rust/book/guessing_game/src/: main.rs
rust/book/hello_cargo/: Cargo.toml
rust/book/hello_cargo/src/: main.rs
rust/book/restaurant/: Cargo.toml
rust/book/restaurant/src/: front_of_house.rs  hashmaps.rs  lib.rs  main.rs
rust/book/restaurant/src/front_of_house/: hosting.rs
rust/book/slices/: Cargo.toml
rust/book/slices/src/: main.rs
rust/book/structs/: Cargo.toml
rust/book/structs/src/: main.rs
rust/book/traits/: Cargo.toml
rust/book/traits/src/: main.rs
rust/book/variables/: Cargo.toml
rust/book/variables/src/: main.rs
rust/guess/: Cargo.toml
rust/guess/src/: main.rs  ser.rs
rust/guess/src/ext/: mod.rs
rust/tetris/: Cargo.toml  tetris-rust.rs
rust/tetris-deepcoder/: Cargo.toml
rust/tetris-deepcoder/src/: main.rs
rust/tetris-gemini/: Cargo.toml
rust/tetris-gemini/src/: main.rs
rust/tetris-llama/: Cargo.toml
rust/tetris-llama/src/: main.rs
rust/tetris-llama4/: Cargo.toml
rust/tetris-llama4/src/: main.rs
rust/tetris/src/: main.rs
sql/: 3pl.sql  aa.pl  fix_standartization.sql  getdoble.pl  presc.sql
xslt/: ucher.xsl
z3/: hello.z3
zero2hero/micrograd/src/: main.rs
