name:                hello
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-extensions: DataKinds
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , ScopedTypeVariables
                    , TypeApplications
                    , TypeSynonymInstances
  exposed-modules:     Bib
                     , Lazy
                     , Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , generic-lens
                     , hashable
                     , lens
                     , mtl
                     , text
                     , unordered-containers
  default-language:    Haskell2010

executable hello
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , hello
  default-language:    Haskell2010

test-suite hello-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hello
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hello
