name:                hello
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hello
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions: DataKinds
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MagicHash
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , OverloadedStrings
                    , PolyKinds
                    , QuantifiedConstraints
                    , RankNTypes
                    , RoleAnnotations
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TypeApplications
                    , TypeSynonymInstances
                    , UnboxedTuples
                    , UndecidableInstances
  build-depends:       base

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hello
