cabal-version:       2.4
name:                leet
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              Aleksey Uymanov
maintainer:          Aleksey Uymanov <s9gf4ult@gmail.com>
copyright:           2021 Aleksey Uymanov
category:            None
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.3

common common-options
  build-depends:       base >= 4.12.0.0 && < 4.14

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Leet
                     , Leet897

executable leet
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       leet
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
