name:                mu-reader
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mu-reader#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , Lib.App1
                     , Lib.App2
                     , Lib.RecReaderT
                     , Lib.Service
  build-depends:       base >= 4.7 && < 5
                     , generic-lens
                     , lens
                     , monad-control
                     , mtl
                     , transformers-base
  default-extensions: DataKinds
                    , DeriveGeneric
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , MultiParamTypeClasses
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TypeApplications
                    , UndecidableInstances
  default-language:    Haskell2010

executable mu-reader
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mu-reader
  default-language:    Haskell2010

test-suite mu-reader-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mu-reader
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mu-reader
